First update Application

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,7 @@
 <%=render 'layouts/navbar'%>
 
 <div class="text-center">
-    <h1>Article New</h1>
+    <h1>합승 게시물 생성</h1>
 </div>
 
 <%=render 'form', article: @article%>
