--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -27,6 +27,10 @@
                 <%=link_to '파트너',kategorie_partner_path,:class => "nav-link"%>
             </li>
             <!-- Dropdown -->
+            <li class="nav-item">
+                <%=link_to '소개',kategorie_introductionn_path, :class => "nav-link", :id => "navbarDropdownMenuLink"%>
+            </li>
+            <!-- Dropdown -->
             <li class="nav-item dropdown">
                 <%=link_to '고객센터',kategorie_servise_center_path, :class => "nav-link dropdown-toggle", :id => "navbarDropdownMenuLink", "aria-expanded" => false, 
                 "aria-haspopup" => true, 'data-toggle' => 'dropdown'%>
@@ -34,15 +38,6 @@
                     <a class="dropdown-item" href="#">공지사항</a>
                     <a class="dropdown-item" href="#">FAQ</a>
                     <a class="dropdown-item" href="#">이벤트</a>
-                </div>
-            </li>
-            <!-- Dropdown -->
-            <li class="nav-item dropdown">
-                <%=link_to '고객센터',kategorie_introductionn_path, :class => "nav-link dropdown-toggle", :id => "navbarDropdownMenuLink", "aria-expanded" => false, 
-                "aria-haspopup" => true, 'data-toggle' => 'dropdown'%>
-                <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">회사 소개</a>
-                    <a class="dropdown-item" href="#">N/1</a>
                 </div>
             </li>
 
